chore: added kubectl

--- a/1.Setup.md
+++ b/1.Setup.md
@@ -18,3 +18,7 @@ Recently I had a chance studying k8s on my end. To setup the k8s, ideally plural
    ```minikube start --driver=docker --alsologtostderr```
    
 That’s it! Now you can see in Docker desktop that the minikube instance is running on your M1 Macbook
+
+# Install kubectl - CLI tool to intrcat with k8 cluster
+
+   ```brew install kubectl```
